--- a/E_commerce_AB_testing_final_pj.ipynb
+++ b/E_commerce_AB_testing_final_pj.ipynb
@@ -96,16 +96,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = '/mnt/HC_Volume_18315164/home-jupyter/jupyter-serg-semenov/groups.csv'  # noqa\n",
+    "# path = 'file_path'  # noqa\n",
     "# groups = pd.read_csv(path, sep=';')\n",
     "\n",
-    "# path = '/mnt/HC_Volume_18315164/home-jupyter/jupyter-serg-semenov/group_add.csv'  # noqa\n",
+    "# path = 'file_path'  # noqa\n",
     "# groups_add = pd.read_csv(path, sep=',')\n",
     "\n",
-    "# path = '/mnt/HC_Volume_18315164/home-jupyter/jupyter-serg-semenov/active_studs.csv'  # noqa\n",
+    "# path = 'file_path'  # noqa\n",
     "# active_studs = pd.read_csv(path, sep=',')\n",
     "\n",
-    "# path = '/mnt/HC_Volume_18315164/home-jupyter/jupyter-serg-semenov/checks.csv'  # noqa\n",
+    "# path = 'file_path'  # noqa\n",
     "# checks = pd.read_csv(path, sep=';')"
    ]
   },
